write affirmations for each outcome type; display affirmations for longer; distinguish locked vs disabled tool states & tooltips; improve help tooltip layout; fix asterisk font

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,19 +26,19 @@
                 <i>Paint by Gender</i> is a work in progress about gender norms and the pressures to conform,
                 designed & developed by Elana Bell Bogdan.
                 <hr>
-                <strong>To play:</strong><br>
-                🖱️ Click &amp; drag to paint on the canvas<br>
-                🖌️ Choose your brush type &amp; size by clicking the tool icons (or using the arrow keys)<br>
-                ⚠️ Sometimes your brush options will be restricted!<br>
-                ⌛ Try to fill in each shape before the time runs out<br>
-                🙅 Painting outside the lines will <strong>not</strong> be tolerated!"
+                <div><strong>To play:</strong></div>
+                <div>🖱️ Click &amp; drag to paint on the canvas</div>
+                <div>🖌️ Choose your brush type &amp; size by clicking the tool icons (or using the arrow keys)</div>
+                <div>⚠️ Sometimes your brush options will be restricted!</div>
+                <div>⌛ Try to fill in each shape before the time runs out</div>
+                <div>🙅 Painting outside the lines will <strong>not</strong> be tolerated!</div>"
             > ? </div>
         </div>
     </navbar>
     <div id="splash-screen">
         <div id="splash-wrapper">
             <img src="./dist/pbg_splash.jpg">
-            <div id="disclaimer">*May evoke feelings of sexism, transphobia, and fatphobia. Not recommended for actual children.</div>
+            <div id="disclaimer"><span class="asterisk">*</span>May evoke feelings of sexism, transphobia, and fatphobia. Not recommended for actual children.</div>
             <button id="btn-begin">Let's paint!</button>
         </div>
     </div>
